# FocusTown-Desktop

./: LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/: android-tv.md  signing.md
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.gnu-windows.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: clear_browsing_data.toml  get_ui_state.toml  set_always_on_top.toml  set_autostart.toml  set_close_to_tray.toml  set_global_shortcut.toml  set_hide_gear.toml  set_keep_awake.toml  set_web_prefs.toml  set_zoom.toml  toggle_fullscreen.toml  toggle_mini_mode.toml
src-tauri/src/: lib.rs  main.rs  overlay.js  settings.rs
